# coin_flip_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
